# CC2604-Practicals

./: CMakeLists.txt
Prac_01/: CMakeLists.txt  main.cpp
Prac_02/: CMakeLists.txt  employee.h  prac02_prog01.cpp  structtest.cpp
Prac_03/: prac03_task01.cpp  prac03_task02.cpp  prac03_task03.cpp  prac03_task04.cpp
